--- a/stylesheets/print.css
+++ b/stylesheets/print.css
@@ -8,6 +8,7 @@
  * Import this file using the following HTML or equivalent:
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
 @import url(http://fonts.googleapis.com/earlyaccess/cwtexming.css);
+@import url(http://fonts.googleapis.com/earlyaccess/cwtexming.css);
 /* line 5, ../../../../Applications/Fire.app/Contents/Resources/lib/ruby/compass_1.0/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -84,40 +85,43 @@ a {
   text-decoration: none;
 }
 
-/* line 24, ../sass/_main_style.scss */
+@font-face {
+  font-family: "cwTeXMing";
+}
+/* line 28, ../sass/_main_style.scss */
 body {
   font-family: 'cwTeXMing', serif;
 }
 
-/* line 28, ../sass/_main_style.scss */
+/* line 32, ../sass/_main_style.scss */
 p {
   line-height: 1.55em;
   letter-spacing: 0.5px;
 }
 
-/* line 34, ../sass/_main_style.scss */
+/* line 38, ../sass/_main_style.scss */
 .clearfix:after {
   display: table;
   content: "";
   clear: both;
 }
 
-/* line 41, ../sass/_main_style.scss */
+/* line 45, ../sass/_main_style.scss */
 .main-container {
   text-align: center;
   padding: 60px 25px;
   background-color: #dedddc;
 }
-/* line 46, ../sass/_main_style.scss */
+/* line 50, ../sass/_main_style.scss */
 .main-container h1 {
   font-size: 28px;
   padding: 1.5em;
 }
-/* line 51, ../sass/_main_style.scss */
+/* line 55, ../sass/_main_style.scss */
 .main-container p {
   padding: 0.55em;
 }
-/* line 55, ../sass/_main_style.scss */
+/* line 59, ../sass/_main_style.scss */
 .main-container .btn {
   margin-top: 60px;
   border: solid 1px #8a2b1e;
@@ -127,17 +131,17 @@ p {
   cursor: pointer;
   transition: all 0.7s;
 }
-/* line 64, ../sass/_main_style.scss */
+/* line 68, ../sass/_main_style.scss */
 .main-container .btn:hover {
   background: #8a2b1e;
   color: #fff;
 }
-/* line 69, ../sass/_main_style.scss */
+/* line 73, ../sass/_main_style.scss */
 .main-container .btn:hover i {
   transform: translate(3px, 1px);
   color: #fff;
 }
-/* line 75, ../sass/_main_style.scss */
+/* line 79, ../sass/_main_style.scss */
 .main-container .btn i {
   color: #8a2b1e;
   font-size: 18px;
@@ -147,12 +151,12 @@ p {
   transition: all 0.7s;
 }
 
-/* line 89, ../sass/_main_style.scss */
+/* line 93, ../sass/_main_style.scss */
 .header {
   background-color: #fff;
   min-height: 100vh;
 }
-/* line 93, ../sass/_main_style.scss */
+/* line 97, ../sass/_main_style.scss */
 .header .header-bg {
   opacity: 0;
   transition: opacity 1.5s;
@@ -169,76 +173,76 @@ p {
   z-index: 0;
 }
 
-/* line 110, ../sass/_main_style.scss */
+/* line 114, ../sass/_main_style.scss */
 .nav-zone {
   padding: 0 35px;
   position: relative;
   z-index: 100;
 }
-/* line 115, ../sass/_main_style.scss */
+/* line 119, ../sass/_main_style.scss */
 .nav-zone:first-child {
   opacity: 0;
   transition: opacity 1.5s;
 }
-/* line 120, ../sass/_main_style.scss */
+/* line 124, ../sass/_main_style.scss */
 .nav-zone .logo-box {
   float: left;
   width: 220px;
 }
-/* line 124, ../sass/_main_style.scss */
+/* line 128, ../sass/_main_style.scss */
 .nav-zone .logo-box img {
   width: 100%;
 }
-/* line 128, ../sass/_main_style.scss */
+/* line 132, ../sass/_main_style.scss */
 .nav-zone .logo-box .fixed-logo {
   display: none;
 }
-/* line 133, ../sass/_main_style.scss */
+/* line 137, ../sass/_main_style.scss */
 .nav-zone .navi-box {
   float: right;
 }
-/* line 135, ../sass/_main_style.scss */
+/* line 139, ../sass/_main_style.scss */
 .nav-zone .navi-box ul {
   padding: 50px 0;
 }
-/* line 138, ../sass/_main_style.scss */
+/* line 142, ../sass/_main_style.scss */
 .nav-zone .navi-box ul li {
   display: inline-block;
   padding: 10px 15px;
   font-size: 17px;
 }
-/* line 144, ../sass/_main_style.scss */
+/* line 148, ../sass/_main_style.scss */
 .nav-zone .navi-box ul a {
   color: #fff;
   transition: all 0.7s;
 }
-/* line 148, ../sass/_main_style.scss */
+/* line 152, ../sass/_main_style.scss */
 .nav-zone .navi-box ul a:hover {
   color: #b28850;
 }
-/* line 154, ../sass/_main_style.scss */
+/* line 158, ../sass/_main_style.scss */
 .nav-zone .navi-box .contact-btn {
   background: #b28850;
   margin: 0px 20px;
   transition: all 0.7s;
   color: #eee;
 }
-/* line 161, ../sass/_main_style.scss */
+/* line 165, ../sass/_main_style.scss */
 .nav-zone .navi-box .contact-btn:hover {
   background: #9e6821;
   color: #fff;
 }
-/* line 166, ../sass/_main_style.scss */
+/* line 170, ../sass/_main_style.scss */
 .nav-zone .navi-box .contact-btn i {
   margin-right: 5px;
 }
 
-/* line 173, ../sass/_main_style.scss */
+/* line 177, ../sass/_main_style.scss */
 .no-opacity {
   opacity: 1 !important;
 }
 
-/* line 177, ../sass/_main_style.scss */
+/* line 181, ../sass/_main_style.scss */
 .fixed-nav {
   display: none;
   position: fixed;
@@ -248,65 +252,65 @@ p {
   top: 0px;
   left: 0px;
 }
-/* line 185, ../sass/_main_style.scss */
+/* line 189, ../sass/_main_style.scss */
 .fixed-nav .logo-box {
   max-width: 110px;
 }
-/* line 187, ../sass/_main_style.scss */
+/* line 191, ../sass/_main_style.scss */
 .fixed-nav .logo-box img {
   display: none;
 }
-/* line 191, ../sass/_main_style.scss */
+/* line 195, ../sass/_main_style.scss */
 .fixed-nav .logo-box .fixed-logo {
   display: block;
 }
-/* line 196, ../sass/_main_style.scss */
+/* line 200, ../sass/_main_style.scss */
 .fixed-nav .navi-box ul {
   padding: 5px 0;
 }
-/* line 200, ../sass/_main_style.scss */
+/* line 204, ../sass/_main_style.scss */
 .fixed-nav .navi-box .contact-btn {
   margin-right: 0px;
   margin-left: 10px;
 }
 
-/* line 210, ../sass/_main_style.scss */
+/* line 214, ../sass/_main_style.scss */
 .footer {
   color: #fff;
 }
-/* line 213, ../sass/_main_style.scss */
+/* line 217, ../sass/_main_style.scss */
 .footer .footer-zone {
   background-image: url(../images/10footertexture.jpg);
   background-repeat: repeat;
   padding: 35px;
 }
-/* line 220, ../sass/_main_style.scss */
+/* line 224, ../sass/_main_style.scss */
 .footer .container {
   max-width: 1280px;
   margin: 0 auto;
   text-align: center;
 }
-/* line 226, ../sass/_main_style.scss */
+/* line 230, ../sass/_main_style.scss */
 .footer .container .box {
   text-align: center;
   padding: 10px 35px;
   display: inline-block;
   vertical-align: middle;
 }
-/* line 232, ../sass/_main_style.scss */
+/* line 236, ../sass/_main_style.scss */
 .footer .container .box:nth-child(1) {
   text-align: right;
 }
-/* line 236, ../sass/_main_style.scss */
+/* line 240, ../sass/_main_style.scss */
 .footer .container .box:nth-child(3) {
   text-align: left;
 }
-/* line 240, ../sass/_main_style.scss */
+/* line 244, ../sass/_main_style.scss */
 .footer .container .box:nth-child(2) {
   border-right: solid 1px rgba(255, 255, 255, 0.5);
   border-left: solid 1px rgba(255, 255, 255, 0.5);
 }
-/* line 246, ../sass/_main_style.scss */
+/* line 250, ../sass/_main_style.scss */
 .footer .container .fb-btn {
   display: inline-block;
   color: #e7bd85;
@@ -318,19 +322,19 @@ p {
   transition: all 0.7s;
   margin-right: 94px;
 }
-/* line 257, ../sass/_main_style.scss */
+/* line 261, ../sass/_main_style.scss */
 .footer .container .fb-btn:hover {
   color: #b28850;
   border-color: #b28850;
 }
-/* line 264, ../sass/_main_style.scss */
+/* line 268, ../sass/_main_style.scss */
 .footer .copyright {
   background-color: #32312e;
   padding: 15px;
   text-align: center;
 }
 
-/* line 274, ../sass/_main_style.scss */
+/* line 278, ../sass/_main_style.scss */
 .slogan {
   position: absolute;
   top: 35%;
@@ -339,7 +343,7 @@ p {
   opacity: 0;
   transition: opacity 1.5s;
 }
-/* line 282, ../sass/_main_style.scss */
+/* line 286, ../sass/_main_style.scss */
 .slogan p {
   text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.35);
   font-size: 40px;
@@ -357,7 +361,7 @@ p {
   text-orientation: upright;
 }
 
-/* line 300, ../sass/_main_style.scss */
+/* line 304, ../sass/_main_style.scss */
 .scroll-btn {
   opacity: 0;
   border: solid 1px rgba(255, 255, 255, 0.5);
@@ -371,7 +375,7 @@ p {
   cursor: pointer;
   transition: all 0.7s;
 }
-/* line 313, ../sass/_main_style.scss */
+/* line 317, ../sass/_main_style.scss */
 .scroll-btn i {
   color: #fff;
   font-size: 36px;
@@ -379,23 +383,23 @@ p {
   opacity: 0.5;
   transition: all 0.7s;
 }
-/* line 321, ../sass/_main_style.scss */
+/* line 325, ../sass/_main_style.scss */
 .scroll-btn:hover {
   border-color: white;
 }
-/* line 324, ../sass/_main_style.scss */
+/* line 328, ../sass/_main_style.scss */
 .scroll-btn:hover i {
   opacity: 1;
   transform: translateY(3px);
 }
 
-/* line 331, ../sass/_main_style.scss */
+/* line 335, ../sass/_main_style.scss */
 .index-about-container {
   position: relative;
   overflow: hidden;
   background-image: url(../images/04paper_texture.png);
 }
-/* line 336, ../sass/_main_style.scss */
+/* line 340, ../sass/_main_style.scss */
 .index-about-container .main-box {
   position: relative;
   z-index: 1;
@@ -403,25 +407,25 @@ p {
   opacity: 0;
   transition: all 3s ease;
 }
-/* line 344, ../sass/_main_style.scss */
+/* line 348, ../sass/_main_style.scss */
 .index-about-container img {
   margin: 25px auto;
 }
-/* line 348, ../sass/_main_style.scss */
+/* line 352, ../sass/_main_style.scss */
 .index-about-container h1 {
   color: #8a2b1e;
   margin-top: 45px;
 }
-/* line 353, ../sass/_main_style.scss */
+/* line 357, ../sass/_main_style.scss */
 .index-about-container p {
   font-size: 17px;
 }
-/* line 357, ../sass/_main_style.scss */
+/* line 361, ../sass/_main_style.scss */
 .index-about-container .btn {
   margin-top: 80px;
   margin-bottom: 45px;
 }
-/* line 362, ../sass/_main_style.scss */
+/* line 366, ../sass/_main_style.scss */
 .index-about-container .bg {
   position: absolute;
   opacity: 0;
@@ -429,45 +433,45 @@ p {
   top: -80%;
   right: -15%;
 }
-/* line 370, ../sass/_main_style.scss */
+/* line 374, ../sass/_main_style.scss */
 .index-about-container .bg:last-child {
   right: auto;
   left: -15%;
   top: -10%;
 }
-/* line 375, ../sass/_main_style.scss */
+/* line 379, ../sass/_main_style.scss */
 .index-about-container .bg:last-child img {
   width: 115%;
 }
-/* line 380, ../sass/_main_style.scss */
+/* line 384, ../sass/_main_style.scss */
 .index-about-container .bg img {
   width: 100%;
 }
 
-/* line 387, ../sass/_main_style.scss */
+/* line 391, ../sass/_main_style.scss */
 .index-about-animate .main-box {
   transform: translateY(0px);
   opacity: 1;
 }
-/* line 392, ../sass/_main_style.scss */
+/* line 396, ../sass/_main_style.scss */
 .index-about-animate .bg {
   right: 0%;
   top: -87%;
   opacity: 1;
 }
-/* line 397, ../sass/_main_style.scss */
+/* line 401, ../sass/_main_style.scss */
 .index-about-animate .bg:last-child {
   right: auto;
   left: 0%;
   top: 0%;
 }
 
-/* line 405, ../sass/_main_style.scss */
+/* line 409, ../sass/_main_style.scss */
 .index-product-zone {
   background-image: url(../images/05productpattern.png);
 }
 
-/* line 409, ../sass/_main_style.scss */
+/* line 413, ../sass/_main_style.scss */
 .index-product-container {
   display: flex;
   padding: 0px;
@@ -475,24 +479,24 @@ p {
   margin: 0 auto;
   background: none;
 }
-/* line 417, ../sass/_main_style.scss */
+/* line 421, ../sass/_main_style.scss */
 .index-product-container > div {
   padding: 60px 25px;
   width: 50%;
 }
-/* line 421, ../sass/_main_style.scss */
+/* line 425, ../sass/_main_style.scss */
 .index-product-container > div:last-child {
   background-image: url(../images/07productpic.png);
   background-size: 100%;
   background-position: center;
   background-repeat: no-repeat;
 }
-/* line 429, ../sass/_main_style.scss */
+/* line 433, ../sass/_main_style.scss */
 .index-product-container .btn {
   margin-bottom: 45px;
 }
 
-/* line 434, ../sass/_main_style.scss */
+/* line 438, ../sass/_main_style.scss */
 .index-conceptstore-container {
   background-image: url(../images/08conceptstore.jpg);
   background-size: 100%;
@@ -500,24 +504,24 @@ p {
   background-position: center;
   padding: 120px 25px 160px;
 }
-/* line 441, ../sass/_main_style.scss */
+/* line 445, ../sass/_main_style.scss */
 .index-conceptstore-container h1, .index-conceptstore-container p, .index-conceptstore-container .btn {
   color: #fff;
 }
-/* line 445, ../sass/_main_style.scss */
+/* line 449, ../sass/_main_style.scss */
 .index-conceptstore-container .btn {
   border-color: #fff;
 }
-/* line 448, ../sass/_main_style.scss */
+/* line 452, ../sass/_main_style.scss */
 .index-conceptstore-container .btn i {
   color: #fff;
 }
-/* line 452, ../sass/_main_style.scss */
+/* line 456, ../sass/_main_style.scss */
 .index-conceptstore-container .btn:hover {
   background: #fff;
   color: #8a2b1e;
 }
-/* line 456, ../sass/_main_style.scss */
+/* line 460, ../sass/_main_style.scss */
 .index-conceptstore-container .btn:hover i {
   color: #8a2b1e;
 }
