--- a/stylesheets/print.css
+++ b/stylesheets/print.css
@@ -85,7 +85,7 @@ a {
 
 /* line 23, ../sass/_main_style.scss */
 body {
-  font-family: 'cwtexqming', serif;
+  font-family: 'cwtexqming', sans-serif;
 }
 
 /* line 27, ../sass/_main_style.scss */
