--- a/sass/_main_style.scss
+++ b/sass/_main_style.scss
@@ -21,7 +21,8 @@ a{
 }
 
 body{
-    font-family:'cwtexqming', serif;
+    font-family: Hoefler Text,Songti TC,serif;
+    -webkit-font-smoothing: antialiased;
 }
 
 p{
