--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -1,4 +1,23 @@
+
+@media(min-width:777px){
+    .visible-xs{
+        display: none;
+    }
+}
+
 @media(max-width:776px){
+    
+
+    .main-container{
+        h1{
+            padding: 15px;
+            font-size: 30px;
+        }
+
+        p{
+            font-size: 18px;
+        }
+    }
     
     .header{
         min-height: 100%;
@@ -20,6 +39,28 @@
             
             ul{
                 display: none;
+                position: fixed;
+                height: 100%;
+                width: 100%;
+                background: $footer-color;
+                top: 50px;
+                left: 0px;
+                padding: 25px;
+                z-index: 5;
+                
+                li{
+                    display: block;
+                    width: 100%;
+                    text-align: center;
+                    padding: 25px 15px;
+                }
+                
+                .contact-btn{
+                    padding: 15px;
+                    margin: 0;
+                    margin-top: 25px;
+                    margin-bottom: 45px;
+                }
             }
         }
 
@@ -41,6 +82,67 @@
         }
     }
     
+    .fixed-nav{
+        padding: 10px 15px;
+    }
+    
+    .hidden-xs{
+        display: none;
+    }
+    
+    .visible-xs{
+        display: block;
+    }
+    
     .index-about-container{
     }
+    
+    .index-product-container{
+        
+        display: block;
+        
+        >div{
+            padding: 0px;
+            width: 100%;
+        }
+        
+        h1{
+            padding: 45px 25px;
+        }
+        
+        p{
+            padding-left: 25px;
+            padding-right: 25px;
+        }
+    } 
+    
+    .index-conceptstore-container{
+        background-size: auto 100%;
+    }
+    
+    .footer{
+        .container{
+            .box{
+                font-size: 14px;
+                text-align: center!important;
+                margin-top: 15px;
+                
+                &:nth-child(2){
+                    border: none;
+                }
+            }
+            
+            .fb-btn{
+                margin-right: 0px;
+            }
+        }  
+    } 
+    
+    .copyright{
+        p{
+            letter-spacing: 0px;
+            font-size: 12px;
+        }
+    }
+    
 }
