--- a/stylesheets/print.css
+++ b/stylesheets/print.css
@@ -85,41 +85,42 @@ a {
 
 /* line 23, ../sass/_main_style.scss */
 body {
+  display: none;
   font-family: Hoefler Text,Songti TC,serif;
   -webkit-font-smoothing: antialiased;
 }
 
-/* line 28, ../sass/_main_style.scss */
+/* line 29, ../sass/_main_style.scss */
 p {
   line-height: 1.55em;
   letter-spacing: 0.5px;
 }
 
-/* line 34, ../sass/_main_style.scss */
+/* line 35, ../sass/_main_style.scss */
 .clearfix:after {
   display: table;
   content: "";
   clear: both;
 }
 
-/* line 41, ../sass/_main_style.scss */
+/* line 42, ../sass/_main_style.scss */
 .main-container {
   text-align: center;
   padding: 60px 25px;
   background-color: #dedddc;
 }
-/* line 46, ../sass/_main_style.scss */
+/* line 47, ../sass/_main_style.scss */
 .main-container h1 {
   font-size: 28px;
   padding: 1.5em;
 }
-/* line 51, ../sass/_main_style.scss */
+/* line 52, ../sass/_main_style.scss */
 .main-container p {
   padding: 0.55em;
   font-size: 18px;
   color: #282726;
 }
-/* line 57, ../sass/_main_style.scss */
+/* line 58, ../sass/_main_style.scss */
 .main-container .btn {
   margin-top: 60px;
   border: solid 1px #8a2b1e;
@@ -129,17 +130,17 @@ p {
   cursor: pointer;
   transition: all 0.7s;
 }
-/* line 66, ../sass/_main_style.scss */
+/* line 67, ../sass/_main_style.scss */
 .main-container .btn:hover {
   background: #8a2b1e;
   color: #fff;
 }
-/* line 71, ../sass/_main_style.scss */
+/* line 72, ../sass/_main_style.scss */
 .main-container .btn:hover i {
   transform: translate(3px, 1px);
   color: #fff;
 }
-/* line 77, ../sass/_main_style.scss */
+/* line 78, ../sass/_main_style.scss */
 .main-container .btn i {
   color: #8a2b1e;
   font-size: 18px;
@@ -149,12 +150,37 @@ p {
   transition: all 0.7s;
 }
 
-/* line 91, ../sass/_main_style.scss */
-.header {
-  background-color: #fff;
+/* line 94, ../sass/_main_style.scss */
+.kv-zone h1 {
+  text-align: center;
+  font-size: 50px;
+  color: #282726;
+  padding: 60px 25px;
+}
+
+/* line 104, ../sass/_main_style.scss */
+.about-wrapper .header {
+  background-size: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  padding: 0px 25px 60px;
+  background-image: url(../images/13_kvbackground.jpg);
+}
+
+/* line 116, ../sass/_main_style.scss */
+.index-wrapper .header {
   min-height: 100vh;
 }
-/* line 95, ../sass/_main_style.scss */
+/* line 120, ../sass/_main_style.scss */
+.index-wrapper .nav-zone:first-child {
+  opacity: 0;
+}
+
+/* line 125, ../sass/_main_style.scss */
+.header {
+  background-color: #fff;
+}
+/* line 128, ../sass/_main_style.scss */
 .header .header-bg {
   opacity: 0;
   transition: opacity 1.5s;
@@ -171,81 +197,80 @@ p {
   z-index: 0;
 }
 
-/* line 112, ../sass/_main_style.scss */
+/* line 145, ../sass/_main_style.scss */
 .nav-zone {
   padding: 0 35px;
   position: relative;
   z-index: 100;
 }
-/* line 117, ../sass/_main_style.scss */
+/* line 150, ../sass/_main_style.scss */
 .nav-zone:first-child {
-  opacity: 0;
   transition: opacity 1.5s;
 }
-/* line 122, ../sass/_main_style.scss */
+/* line 154, ../sass/_main_style.scss */
 .nav-zone .logo-box {
   float: left;
   width: 220px;
 }
-/* line 126, ../sass/_main_style.scss */
+/* line 158, ../sass/_main_style.scss */
 .nav-zone .logo-box img {
   width: 100%;
 }
-/* line 130, ../sass/_main_style.scss */
+/* line 162, ../sass/_main_style.scss */
 .nav-zone .logo-box .fixed-logo {
   display: none;
 }
-/* line 135, ../sass/_main_style.scss */
+/* line 167, ../sass/_main_style.scss */
 .nav-zone .navi-box {
   float: right;
 }
-/* line 137, ../sass/_main_style.scss */
+/* line 169, ../sass/_main_style.scss */
 .nav-zone .navi-box ul {
   padding: 50px 0;
 }
-/* line 140, ../sass/_main_style.scss */
+/* line 172, ../sass/_main_style.scss */
 .nav-zone .navi-box ul li {
   display: inline-block;
   padding: 10px 15px;
   font-size: 17px;
 }
-/* line 146, ../sass/_main_style.scss */
+/* line 178, ../sass/_main_style.scss */
 .nav-zone .navi-box ul a {
   color: #fff;
   transition: all 0.7s;
 }
-/* line 150, ../sass/_main_style.scss */
+/* line 182, ../sass/_main_style.scss */
 .nav-zone .navi-box ul a:hover {
   color: #b28850;
 }
-/* line 156, ../sass/_main_style.scss */
+/* line 188, ../sass/_main_style.scss */
 .nav-zone .navi-box .contact-btn {
   background: #b28850;
   margin: 0px 20px;
   transition: all 0.7s;
   color: #eee;
 }
-/* line 163, ../sass/_main_style.scss */
+/* line 195, ../sass/_main_style.scss */
 .nav-zone .navi-box .contact-btn:hover {
   background: #9e6821;
   color: #fff;
 }
-/* line 168, ../sass/_main_style.scss */
+/* line 200, ../sass/_main_style.scss */
 .nav-zone .navi-box .contact-btn i {
   margin-right: 5px;
 }
-/* line 174, ../sass/_main_style.scss */
+/* line 206, ../sass/_main_style.scss */
 .nav-zone .menu-btn {
   cursor: pointer;
   position: relative;
   padding: 5px;
 }
-/* line 178, ../sass/_main_style.scss */
+/* line 210, ../sass/_main_style.scss */
 .nav-zone .menu-btn i {
   color: #fff;
   font-size: 19px;
 }
-/* line 183, ../sass/_main_style.scss */
+/* line 215, ../sass/_main_style.scss */
 .nav-zone .menu-btn .fa-remove {
   position: absolute;
   background: #32312e;
@@ -257,16 +282,16 @@ p {
   opacity: 0;
   transition: all 0.7s ease;
 }
-/* line 197, ../sass/_main_style.scss */
+/* line 229, ../sass/_main_style.scss */
 .nav-zone .menu-active .fa-remove {
   transform: rotate(0deg);
   opacity: 1;
 }
-/* line 203, ../sass/_main_style.scss */
+/* line 235, ../sass/_main_style.scss */
 .nav-zone .social-btns {
   text-align: center;
 }
-/* line 205, ../sass/_main_style.scss */
+/* line 237, ../sass/_main_style.scss */
 .nav-zone .social-btns a {
   display: inline-block;
   border: solid 1px #b28850;
@@ -277,17 +302,12 @@ p {
   line-height: 45px;
   text-align: center;
 }
-/* line 215, ../sass/_main_style.scss */
+/* line 247, ../sass/_main_style.scss */
 .nav-zone .social-btns a i {
   color: #b28850;
 }
 
-/* line 222, ../sass/_main_style.scss */
-.no-opacity {
-  opacity: 1 !important;
-}
-
-/* line 226, ../sass/_main_style.scss */
+/* line 254, ../sass/_main_style.scss */
 .fixed-nav {
   display: none;
   position: fixed;
@@ -297,65 +317,65 @@ p {
   top: 0px;
   left: 0px;
 }
-/* line 234, ../sass/_main_style.scss */
+/* line 262, ../sass/_main_style.scss */
 .fixed-nav .logo-box {
   max-width: 110px;
 }
-/* line 236, ../sass/_main_style.scss */
+/* line 264, ../sass/_main_style.scss */
 .fixed-nav .logo-box img {
   display: none;
 }
-/* line 240, ../sass/_main_style.scss */
+/* line 268, ../sass/_main_style.scss */
 .fixed-nav .logo-box .fixed-logo {
   display: block;
 }
-/* line 245, ../sass/_main_style.scss */
+/* line 273, ../sass/_main_style.scss */
 .fixed-nav .navi-box ul {
   padding: 5px 0;
 }
-/* line 249, ../sass/_main_style.scss */
+/* line 277, ../sass/_main_style.scss */
 .fixed-nav .navi-box .contact-btn {
   margin-right: 0px;
   margin-left: 10px;
 }
 
-/* line 259, ../sass/_main_style.scss */
+/* line 287, ../sass/_main_style.scss */
 .footer {
   color: #fff;
 }
-/* line 262, ../sass/_main_style.scss */
+/* line 290, ../sass/_main_style.scss */
 .footer .footer-zone {
   background-image: url(../images/10footertexture.jpg);
   background-repeat: repeat;
   padding: 35px;
 }
-/* line 269, ../sass/_main_style.scss */
+/* line 297, ../sass/_main_style.scss */
 .footer .container {
   max-width: 1280px;
   margin: 0 auto;
   text-align: center;
 }
-/* line 275, ../sass/_main_style.scss */
+/* line 303, ../sass/_main_style.scss */
 .footer .container .box {
   text-align: center;
   padding: 10px 35px;
   display: inline-block;
   vertical-align: middle;
 }
-/* line 281, ../sass/_main_style.scss */
+/* line 309, ../sass/_main_style.scss */
 .footer .container .box:nth-child(1) {
   text-align: right;
 }
-/* line 285, ../sass/_main_style.scss */
+/* line 313, ../sass/_main_style.scss */
 .footer .container .box:nth-child(3) {
   text-align: left;
 }
-/* line 289, ../sass/_main_style.scss */
+/* line 317, ../sass/_main_style.scss */
 .footer .container .box:nth-child(2) {
   border-right: solid 1px rgba(255, 255, 255, 0.5);
   border-left: solid 1px rgba(255, 255, 255, 0.5);
 }
-/* line 295, ../sass/_main_style.scss */
+/* line 323, ../sass/_main_style.scss */
 .footer .container .fb-btn {
   display: inline-block;
   color: #e7bd85;
@@ -367,19 +387,19 @@ p {
   transition: all 0.7s;
   margin-right: 94px;
 }
-/* line 306, ../sass/_main_style.scss */
+/* line 334, ../sass/_main_style.scss */
 .footer .container .fb-btn:hover {
   color: #b28850;
   border-color: #b28850;
 }
-/* line 313, ../sass/_main_style.scss */
+/* line 341, ../sass/_main_style.scss */
 .footer .copyright {
   background-color: #32312e;
   padding: 15px;
   text-align: center;
 }
 
-/* line 323, ../sass/_main_style.scss */
+/* line 351, ../sass/_main_style.scss */
 .slogan {
   position: absolute;
   top: 35%;
@@ -388,7 +408,7 @@ p {
   opacity: 0;
   transition: opacity 1.5s;
 }
-/* line 331, ../sass/_main_style.scss */
+/* line 359, ../sass/_main_style.scss */
 .slogan p {
   text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.35);
   font-size: 40px;
@@ -406,7 +426,7 @@ p {
   text-orientation: upright;
 }
 
-/* line 349, ../sass/_main_style.scss */
+/* line 377, ../sass/_main_style.scss */
 .scroll-btn {
   opacity: 0;
   border: solid 1px rgba(255, 255, 255, 0.5);
@@ -420,7 +440,7 @@ p {
   cursor: pointer;
   transition: all 0.7s;
 }
-/* line 362, ../sass/_main_style.scss */
+/* line 390, ../sass/_main_style.scss */
 .scroll-btn i {
   color: #fff;
   font-size: 36px;
@@ -428,23 +448,23 @@ p {
   opacity: 0.5;
   transition: all 0.7s;
 }
-/* line 370, ../sass/_main_style.scss */
+/* line 398, ../sass/_main_style.scss */
 .scroll-btn:hover {
   border-color: white;
 }
-/* line 373, ../sass/_main_style.scss */
+/* line 401, ../sass/_main_style.scss */
 .scroll-btn:hover i {
   opacity: 1;
   transform: translateY(3px);
 }
 
-/* line 380, ../sass/_main_style.scss */
+/* line 408, ../sass/_main_style.scss */
 .index-about-container {
   position: relative;
   overflow: hidden;
   background-image: url(../images/04paper_texture.png);
 }
-/* line 385, ../sass/_main_style.scss */
+/* line 413, ../sass/_main_style.scss */
 .index-about-container .main-box {
   position: relative;
   z-index: 1;
@@ -452,25 +472,25 @@ p {
   opacity: 0;
   transition: all 3s ease;
 }
-/* line 393, ../sass/_main_style.scss */
+/* line 421, ../sass/_main_style.scss */
 .index-about-container img {
   margin: 25px auto;
 }
-/* line 397, ../sass/_main_style.scss */
+/* line 425, ../sass/_main_style.scss */
 .index-about-container h1 {
   color: #8a2b1e;
   margin-top: 45px;
 }
-/* line 402, ../sass/_main_style.scss */
+/* line 430, ../sass/_main_style.scss */
 .index-about-container p {
   font-size: 17px;
 }
-/* line 406, ../sass/_main_style.scss */
+/* line 434, ../sass/_main_style.scss */
 .index-about-container .btn {
   margin-top: 80px;
   margin-bottom: 45px;
 }
-/* line 411, ../sass/_main_style.scss */
+/* line 439, ../sass/_main_style.scss */
 .index-about-container .bg {
   position: absolute;
   opacity: 0;
@@ -478,45 +498,45 @@ p {
   top: -80%;
   right: -15%;
 }
-/* line 419, ../sass/_main_style.scss */
+/* line 447, ../sass/_main_style.scss */
 .index-about-container .bg:last-child {
   right: auto;
   left: -15%;
   top: -10%;
 }
-/* line 424, ../sass/_main_style.scss */
+/* line 452, ../sass/_main_style.scss */
 .index-about-container .bg:last-child img {
   width: 115%;
 }
-/* line 429, ../sass/_main_style.scss */
+/* line 457, ../sass/_main_style.scss */
 .index-about-container .bg img {
   width: 100%;
 }
 
-/* line 436, ../sass/_main_style.scss */
+/* line 464, ../sass/_main_style.scss */
 .index-about-animate .main-box {
   transform: translateY(0px);
   opacity: 1;
 }
-/* line 441, ../sass/_main_style.scss */
+/* line 469, ../sass/_main_style.scss */
 .index-about-animate .bg {
   right: 0%;
   top: -87%;
   opacity: 1;
 }
-/* line 446, ../sass/_main_style.scss */
+/* line 474, ../sass/_main_style.scss */
 .index-about-animate .bg:last-child {
   right: auto;
   left: 0%;
   top: 0%;
 }
 
-/* line 454, ../sass/_main_style.scss */
+/* line 482, ../sass/_main_style.scss */
 .index-product-zone {
   background-image: url(../images/05productpattern.png);
 }
 
-/* line 458, ../sass/_main_style.scss */
+/* line 486, ../sass/_main_style.scss */
 .index-product-container {
   display: flex;
   padding: 0px;
@@ -524,24 +544,24 @@ p {
   margin: 0 auto;
   background: none;
 }
-/* line 466, ../sass/_main_style.scss */
+/* line 494, ../sass/_main_style.scss */
 .index-product-container > div {
   padding: 60px 25px;
   width: 50%;
 }
-/* line 470, ../sass/_main_style.scss */
+/* line 498, ../sass/_main_style.scss */
 .index-product-container > div:last-child {
   background-image: url(../images/07productpic.png);
   background-size: 100%;
   background-position: center;
   background-repeat: no-repeat;
 }
-/* line 478, ../sass/_main_style.scss */
+/* line 506, ../sass/_main_style.scss */
 .index-product-container .btn {
   margin-bottom: 45px;
 }
 
-/* line 483, ../sass/_main_style.scss */
+/* line 511, ../sass/_main_style.scss */
 .index-conceptstore-container {
   background-image: url(../images/08conceptstore.jpg);
   background-size: 100%;
@@ -549,64 +569,65 @@ p {
   background-position: center;
   padding: 120px 25px 160px;
 }
-/* line 490, ../sass/_main_style.scss */
+/* line 518, ../sass/_main_style.scss */
 .index-conceptstore-container h1, .index-conceptstore-container p, .index-conceptstore-container .btn {
   color: #fff;
 }
-/* line 494, ../sass/_main_style.scss */
+/* line 522, ../sass/_main_style.scss */
 .index-conceptstore-container .btn {
   border-color: #fff;
 }
-/* line 497, ../sass/_main_style.scss */
+/* line 525, ../sass/_main_style.scss */
 .index-conceptstore-container .btn i {
   color: #fff;
 }
-/* line 501, ../sass/_main_style.scss */
+/* line 529, ../sass/_main_style.scss */
 .index-conceptstore-container .btn:hover {
   background: #fff;
   color: #8a2b1e;
 }
-/* line 505, ../sass/_main_style.scss */
+/* line 533, ../sass/_main_style.scss */
 .index-conceptstore-container .btn:hover i {
   color: #8a2b1e;
 }
 
+/* line 3, ../sass/_media.scss */
+.no-opacity {
+  opacity: 1;
+}
+
 @media (min-width: 777px) {
-  /* line 3, ../sass/_media.scss */
+  /* line 9, ../sass/_media.scss */
   .visible-xs {
     display: none;
   }
 }
 @media (max-width: 776px) {
-  /* line 12, ../sass/_media.scss */
+  /* line 18, ../sass/_media.scss */
   .main-container h1 {
     padding: 15px;
     font-size: 30px;
   }
-  /* line 17, ../sass/_media.scss */
+  /* line 23, ../sass/_media.scss */
   .main-container p {
     font-size: 18px;
   }
 
-  /* line 22, ../sass/_media.scss */
-  .header {
-    min-height: 100%;
-  }
-  /* line 26, ../sass/_media.scss */
+  /* line 37, ../sass/_media.scss */
   .header .nav-zone:first-child {
     display: none;
   }
-  /* line 31, ../sass/_media.scss */
+  /* line 42, ../sass/_media.scss */
   .header .fixed-nav {
     display: block;
     opacity: 0;
     transition: all 0.7s;
   }
-  /* line 36, ../sass/_media.scss */
+  /* line 47, ../sass/_media.scss */
   .header .fixed-nav .logo-box {
     width: 70px;
   }
-  /* line 40, ../sass/_media.scss */
+  /* line 51, ../sass/_media.scss */
   .header .fixed-nav ul {
     display: none;
     position: fixed;
@@ -618,92 +639,92 @@ p {
     padding: 25px;
     z-index: 5;
   }
-  /* line 51, ../sass/_media.scss */
+  /* line 62, ../sass/_media.scss */
   .header .fixed-nav ul li {
     display: block;
     width: 100%;
     text-align: center;
     padding: 25px 15px;
   }
-  /* line 58, ../sass/_media.scss */
+  /* line 69, ../sass/_media.scss */
   .header .fixed-nav ul .contact-btn {
     padding: 15px;
     margin: 0;
     margin-top: 25px;
     margin-bottom: 45px;
   }
-  /* line 67, ../sass/_media.scss */
+  /* line 78, ../sass/_media.scss */
   .header .header-bg {
     background-position: bottom center;
     background-size: 110%;
     background-image: url(../images/KV02-mobile.png);
   }
-  /* line 73, ../sass/_media.scss */
+  /* line 84, ../sass/_media.scss */
   .header .slogan {
     top: 58%;
     left: 60%;
     margin: 0;
   }
-  /* line 78, ../sass/_media.scss */
+  /* line 89, ../sass/_media.scss */
   .header .slogan p {
     font-size: 21px;
   }
 
-  /* line 85, ../sass/_media.scss */
+  /* line 96, ../sass/_media.scss */
   .fixed-nav {
     padding: 10px 15px;
   }
 
-  /* line 89, ../sass/_media.scss */
+  /* line 100, ../sass/_media.scss */
   .hidden-xs {
     display: none;
   }
 
-  /* line 93, ../sass/_media.scss */
+  /* line 104, ../sass/_media.scss */
   .visible-xs {
     display: block;
   }
 
-  /* line 100, ../sass/_media.scss */
+  /* line 111, ../sass/_media.scss */
   .index-product-container {
     display: block;
   }
-  /* line 104, ../sass/_media.scss */
+  /* line 115, ../sass/_media.scss */
   .index-product-container > div {
     padding: 0px;
     width: 100%;
   }
-  /* line 109, ../sass/_media.scss */
+  /* line 120, ../sass/_media.scss */
   .index-product-container h1 {
     padding: 65px 25px 25px;
   }
-  /* line 113, ../sass/_media.scss */
+  /* line 124, ../sass/_media.scss */
   .index-product-container p {
     padding-left: 25px;
     padding-right: 25px;
   }
 
-  /* line 119, ../sass/_media.scss */
+  /* line 130, ../sass/_media.scss */
   .index-conceptstore-container {
     background-size: auto 100%;
   }
 
-  /* line 125, ../sass/_media.scss */
+  /* line 136, ../sass/_media.scss */
   .footer .container .box {
     font-size: 14px;
     text-align: center !important;
     margin-top: 15px;
   }
-  /* line 130, ../sass/_media.scss */
+  /* line 141, ../sass/_media.scss */
   .footer .container .box:nth-child(2) {
     border: none;
   }
-  /* line 135, ../sass/_media.scss */
+  /* line 146, ../sass/_media.scss */
   .footer .container .fb-btn {
     margin-right: 0px;
   }
 
-  /* line 142, ../sass/_media.scss */
+  /* line 153, ../sass/_media.scss */
   .copyright p {
     letter-spacing: 0px;
     font-size: 12px;
