--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -137,6 +137,8 @@
                 font-size: 14px;
                 text-align: center!important;
                 margin-top: 15px;
+                padding-left: 0px;
+                padding-right: 0px;
                 
                 &:nth-child(2){
                     border: none;
