--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -139,6 +139,7 @@
                 margin-top: 15px;
                 padding-left: 0px;
                 padding-right: 0px;
+                width: 100%;
                 
                 &:nth-child(2){
                     border: none;
