--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -141,6 +141,13 @@
                 padding-right: 0px;
                 width: 100%;
                 
+                a{
+                    padding: 0px;
+                    margin: 0px;
+                    display: block;
+                    text-align: center;
+                }
+                
                 &:nth-child(2){
                     border: none;
                 }
