--- a/stylesheets/print.css
+++ b/stylesheets/print.css
@@ -667,7 +667,7 @@ p {
 
 /* line 613, ../sass/_main_style.scss */
 .about-brand {
-  padding-bottom: 85px;
+  padding-bottom: 65px;
 }
 
 /* line 617, ../sass/_main_style.scss */
@@ -717,6 +717,103 @@ p {
   bottom: 0%;
 }
 
+/* line 663, ../sass/_main_style.scss */
+#about-slider {
+  position: relative;
+}
+/* line 665, ../sass/_main_style.scss */
+#about-slider .main-box {
+  max-width: 600px;
+  margin: 0 auto;
+  text-align: left;
+  position: relative;
+  padding-bottom: 280px;
+  z-index: 1;
+}
+/* line 673, ../sass/_main_style.scss */
+#about-slider .main-box h1, #about-slider .main-box p, #about-slider .main-box span {
+  padding-left: 0px;
+  padding-right: 0px;
+  text-align: left;
+}
+/* line 679, ../sass/_main_style.scss */
+#about-slider .main-box hr {
+  height: 120px;
+  width: 1px;
+  background: #282726;
+  margin-left: 15px;
+  margin-top: -15px;
+}
+/* line 685, ../sass/_main_style.scss */
+#about-slider .main-box hr:after, #about-slider .main-box hr:before {
+  display: none;
+}
+/* line 691, ../sass/_main_style.scss */
+#about-slider .slider-text {
+  position: absolute;
+  top: 260px;
+  left: 10px;
+  display: none;
+}
+/* line 697, ../sass/_main_style.scss */
+#about-slider .slider-text span {
+  color: #8a2b1e;
+}
+/* line 701, ../sass/_main_style.scss */
+#about-slider .slider-text h1 {
+  color: #8a2b1e;
+  margin-bottom: 35px;
+  padding: 0px;
+  margin-top: 25px;
+}
+/* line 709, ../sass/_main_style.scss */
+#about-slider .slider-bg {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0px;
+  left: 0px;
+  z-index: 0;
+  background-position: center;
+  background-size: 100%;
+  background-repeat: no-repeat;
+  display: none;
+}
+/* line 722, ../sass/_main_style.scss */
+#about-slider #slide1 {
+  background-image: url(../images/09redray_A.jpg);
+}
+/* line 726, ../sass/_main_style.scss */
+#about-slider #slide2 {
+  background-image: url(../images/10redray_B.jpg);
+}
+/* line 730, ../sass/_main_style.scss */
+#about-slider #slide3 {
+  background-image: url(../images/11redray_C.jpg);
+}
+/* line 734, ../sass/_main_style.scss */
+#about-slider #slideDot ul {
+  text-align: center;
+  position: relative;
+  z-index: 10;
+}
+/* line 739, ../sass/_main_style.scss */
+#about-slider #slideDot ul li {
+  display: inline-block;
+  height: 8px;
+  width: 8px;
+  border: solid 1px #282726;
+  border-radius: 100%;
+  margin: 15px;
+  background: transparent;
+  transition: background 0.7s;
+  cursor: pointer;
+}
+/* line 751, ../sass/_main_style.scss */
+#about-slider #slideDot ul .active {
+  background: #282726;
+}
+
 /* line 3, ../sass/_media.scss */
 .no-opacity {
   opacity: 1;
@@ -734,38 +831,43 @@ p {
   .visible-xs {
     display: none;
   }
+
+  /* line 22, ../sass/_media.scss */
+  .hidden-xs {
+    display: block;
+  }
 }
 @media (max-width: 776px) {
-  /* line 27, ../sass/_media.scss */
+  /* line 31, ../sass/_media.scss */
   .main-container h1 {
     padding: 15px;
     font-size: 30px;
   }
-  /* line 32, ../sass/_media.scss */
+  /* line 36, ../sass/_media.scss */
   .main-container p {
     font-size: 18px;
   }
 
-  /* line 43, ../sass/_media.scss */
+  /* line 47, ../sass/_media.scss */
   .main-container h1 + hr {
     margin-top: 15px;
   }
 
-  /* line 50, ../sass/_media.scss */
+  /* line 54, ../sass/_media.scss */
   .header .nav-zone:first-child {
     display: none;
   }
-  /* line 55, ../sass/_media.scss */
+  /* line 59, ../sass/_media.scss */
   .header .fixed-nav {
     display: block;
     opacity: 0;
     transition: all 0.7s;
   }
-  /* line 60, ../sass/_media.scss */
+  /* line 64, ../sass/_media.scss */
   .header .fixed-nav .logo-box {
     width: 70px;
   }
-  /* line 64, ../sass/_media.scss */
+  /* line 68, ../sass/_media.scss */
   .header .fixed-nav ul {
     display: none;
     position: fixed;
@@ -777,90 +879,90 @@ p {
     padding: 25px;
     z-index: 5;
   }
-  /* line 75, ../sass/_media.scss */
+  /* line 79, ../sass/_media.scss */
   .header .fixed-nav ul li {
     display: block;
     width: 100%;
     text-align: center;
     padding: 25px 15px;
   }
-  /* line 82, ../sass/_media.scss */
+  /* line 86, ../sass/_media.scss */
   .header .fixed-nav ul .contact-btn {
     padding: 15px;
     margin: 0;
     margin-top: 25px;
     margin-bottom: 45px;
   }
-  /* line 91, ../sass/_media.scss */
+  /* line 95, ../sass/_media.scss */
   .header .header-bg {
     background-position: bottom center;
     background-size: 110%;
     background-image: url(../images/KV02-mobile.png);
   }
-  /* line 97, ../sass/_media.scss */
+  /* line 101, ../sass/_media.scss */
   .header .slogan {
     top: 58%;
     left: 60%;
     margin: 0;
   }
-  /* line 102, ../sass/_media.scss */
+  /* line 106, ../sass/_media.scss */
   .header .slogan p {
     font-size: 21px;
   }
 
-  /* line 109, ../sass/_media.scss */
+  /* line 113, ../sass/_media.scss */
   .fixed-nav {
     padding: 10px 15px;
   }
 
-  /* line 113, ../sass/_media.scss */
+  /* line 117, ../sass/_media.scss */
   .hidden-xs {
     display: none;
   }
 
-  /* line 117, ../sass/_media.scss */
+  /* line 121, ../sass/_media.scss */
   .visible-xs {
     display: block;
   }
 
-  /* line 124, ../sass/_media.scss */
+  /* line 128, ../sass/_media.scss */
   .index-product-container {
     display: block;
   }
-  /* line 128, ../sass/_media.scss */
+  /* line 132, ../sass/_media.scss */
   .index-product-container > div {
     padding: 0px;
     width: 100%;
   }
-  /* line 133, ../sass/_media.scss */
+  /* line 137, ../sass/_media.scss */
   .index-product-container h1 {
     padding: 65px 25px 25px;
   }
-  /* line 137, ../sass/_media.scss */
+  /* line 141, ../sass/_media.scss */
   .index-product-container p {
     padding-left: 25px;
     padding-right: 25px;
   }
 
-  /* line 143, ../sass/_media.scss */
+  /* line 147, ../sass/_media.scss */
   .index-conceptstore-container {
     background-size: auto 100%;
   }
 
-  /* line 148, ../sass/_media.scss */
+  /* line 152, ../sass/_media.scss */
   .about-wrapper .header {
     background-image: url(../images/13_kvbackground.jpg);
     background-size: auto 100%;
     margin-top: 49px;
     padding: 15px 15px;
   }
-  /* line 154, ../sass/_media.scss */
+  /* line 158, ../sass/_media.scss */
   .about-wrapper .header h1 {
     font-size: 30px;
     letter-spacing: 1px;
   }
 
-  /* line 163, ../sass/_media.scss */
+  /* line 167, ../sass/_media.scss */
   .footer .container .box {
     font-size: 14px;
     text-align: center !important;
@@ -869,7 +971,7 @@ p {
     padding-right: 0px;
     width: 100%;
   }
-  /* line 171, ../sass/_media.scss */
+  /* line 175, ../sass/_media.scss */
   .footer .container .box a {
     font-size: 16px;
     padding: 0px;
@@ -877,58 +979,62 @@ p {
     text-align: center;
     font-family: serif !important;
   }
-  /* line 179, ../sass/_media.scss */
+  /* line 183, ../sass/_media.scss */
   .footer .container .box:nth-child(2) {
     border: none;
   }
-  /* line 184, ../sass/_media.scss */
+  /* line 188, ../sass/_media.scss */
   .footer .container .fb-btn {
     margin-right: 0px;
   }
 
-  /* line 191, ../sass/_media.scss */
+  /* line 195, ../sass/_media.scss */
   .copyright p {
     letter-spacing: 0px;
     font-size: 12px;
   }
 
-  /* line 198, ../sass/_media.scss */
+  /* line 202, ../sass/_media.scss */
   .about-prouct {
     padding: 80px 20px;
   }
-  /* line 203, ../sass/_media.scss */
+  /* line 207, ../sass/_media.scss */
   .about-prouct .main-box h1, .about-prouct .main-box p {
     text-align: center;
   }
-  /* line 207, ../sass/_media.scss */
+  /* line 211, ../sass/_media.scss */
   .about-prouct .main-box hr {
     margin: 20px auto;
   }
-  /* line 213, ../sass/_media.scss */
+  /* line 217, ../sass/_media.scss */
   .about-prouct .product img {
     width: 100%;
   }
-  /* line 218, ../sass/_media.scss */
+  /* line 222, ../sass/_media.scss */
   .about-prouct .item1 {
     top: -70px;
     left: 0%;
     width: 250px;
   }
-  /* line 224, ../sass/_media.scss */
+  /* line 228, ../sass/_media.scss */
   .about-prouct .item2 {
     top: 10%;
     left: -90px;
     width: 180px;
   }
-  /* line 230, ../sass/_media.scss */
+  /* line 234, ../sass/_media.scss */
   .about-prouct .item3 {
     width: 230px;
     right: -45px;
     bottom: 35px;
   }
 
-  /* line 237, ../sass/_media.scss */
+  /* line 241, ../sass/_media.scss */
   .about-brand {
     padding-bottom: 0px;
+  }
+  /* line 244, ../sass/_media.scss */
+  .about-brand span {
+    display: none;
   }
 }
