--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -289,4 +289,12 @@
        
     }
     
+    .video-responsive{
+        margin-bottom: 0px;
+    }
+    
+    .about-video{
+        padding: 25px 15px 35px;
+    }
+    
 }
