--- a/sass/_main_style.scss
+++ b/sass/_main_style.scss
@@ -36,6 +36,27 @@ p{
     letter-spacing: 0.5px;
 }
 
+
+.video-responsive {
+    position: relative;
+    padding-bottom: 55.25%;
+    padding-top: 30px; 
+    height: 0; 
+    overflow: hidden;
+    margin-top: 45px;
+    margin-bottom: 60px;
+}
+
+.video-responsive iframe,
+.video-responsive object,
+.video-responsive embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
 .clearfix{
     &:after{
         display: table;
@@ -753,5 +774,17 @@ p{
                 background: $font-color;
             }
         }
+    }
+}
+.about-video {
+    background: url(../images/12benefit_patternB.jpg);
+    
+    h1{
+        color: #fff;
+    }
+    
+    .main-box{
+        max-width: 800px;
+        margin: 0 auto;
     }
 }
