--- a/sass/_main_style.scss
+++ b/sass/_main_style.scss
@@ -745,15 +745,15 @@ p{
     }
     
     #slide1{
-        background-image: url(../images/09redray_A.jpg);
+        background-image: url(../images/09redray_AA.jpg);
     }
     
     #slide2{
-        background-image: url(../images/10redray_B.jpg);
+        background-image: url(../images/11redray_CC.jpg);
     }
     
     #slide3{
-        background-image: url(../images/11redray_C.jpg);
+        background-image: url(../images/10redray_BB.jpg);
     }
     #slideDot{
         ul{
