--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -39,6 +39,18 @@
         }
     }
     
+    #slide1{
+        background-image: url(../images/09redray_A.jpg);
+    }
+
+    #slide2{
+        background-image: url(../images/11redray_C.jpg);
+    }
+
+    #slide3{
+        background-image: url(../images/10redray_B.jpg);
+    }
+    
     .index-wrapper{
         .header{
             
