--- a/sass/_main_style.scss
+++ b/sass/_main_style.scss
@@ -653,6 +653,9 @@ p{
             padding-right: 0px;
             text-align: left;
             color: #fff;
+        }
+        
+        p{
             line-height: 2.5em;
         }
         
